# entitycore

./: .env.run-docker  .env.run-local  .env.test-docker  .env.test-local  .git-blame-ignore-revs  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  alembic.ini  app.py  docker-cmd.sh  docker-compose.run.yml  docker-compose.test.yml  import_data.py  model.py  pyproject.toml  ruff.toml  single_neuron_synaptome.json
.amazonq/rules/: project.md
.github/workflows/: audit.yml  publish.yml  run-tests.yml
alembic/: env.py  script.py.mako
alembic/versions/: 20250122_112240_610706269554_.py  20250124_104835_e2f8cd800db7_.py  20250124_104927_989322c75e81_.py  20250128_141045_f260eadd2cec_.py  20250129_091529_6dac1d228a54_.py  20250130_133440_def30f2236a9_.py  20250131_131917_87634ff81363_.py  20250204_122146_24294f7d5110_.py  20250204_162811_94fb7ec16bfd_.py  20250204_173424_71a52eb5b537_.py  20250204_193109_3976d1e8083b_.py  20250205_095308_20145f078d5a_.py  20250205_162047_81e0f3f095f5_.py  20250205_163319_4774e3ceb35e_.py  20250206_105950_d9b7fe37e1b8_.py  20250210_171207_91dfdcef513d_.py  20250213_110743_6f8d3b6426aa_.py  20250213_132812_bb662aeaecef_.py  20250214_092912_9ae9c2d5bbb5_.py  20250214_110651_f60009552cd3_.py  20250214_110711_b300b17671e3_.py  20250214_125805_1de0e9a0a8e1_.py  20250218_140127_b36a69f3b5e4_.py  20250225_163455_48378d76d7b0_.py  20250228_155051_878abb621e21_.py  20250228_160052_30a01a4a62c9_.py  20250304_141911_608387cc88cd_.py  20250305_191835_bde990f45411_.py  20250305_192407_ae6e0ff3b281_.py  20250305_195144_bf5ce5b9712e_.py  20250305_195207_5abb2ee01408_.py  20250306_073637_d62db6fc94c7_.py  20250306_073647_7c9f6b6a2d92_.py  20250312_181107_482b1644d661_.py  20250312_211329_d0a98a21ce35_.py  20250312_211336_45b1c426d30c_.py  20250313_142153_59031f2cd23f_.py  20250313_153316_03dd966582b1_.py  20250313_171618_7ff3a7391c16_.py  20250313_184253_676937dae57e_.py  (+449 more)
app/: __init__.py  __main__.py  application.py  config.py  context.py  errors.py  logger.py  middleware.py  sentry.py
app/cli/: brain_region_data.py  curate.py  import-data.py  import_data.py  mappings.py  types.py  utils.py
app/db/: #model.py#  __init__.py  auth.py  authorization.py  events.py  model.py  session.py  triggers.py  types.py  utils.py  validation.py
app/dependencies/: __init__.py  auth.py  common.py  db.py  filter.py  logger.py  s3.py  virtual_lab_api.py
app/filters/: __init__.py  activity.py  analysis_notebook_environment.py  analysis_notebook_execution.py  analysis_notebook_result.py  analysis_notebook_template.py  asset.py  base.py  brain_atlas.py  brain_region.py  brain_region_hierarchy.py  brain_region_mesh.py  brain_region_name.py  calibration.py  calibration_result.py  campaign.py  cell_composition.py  cell_morphology.py  cell_morphology_protocol.py  circuit.py  circuit_extraction_campaign.py  circuit_extraction_config.py  circuit_extraction_config_generation.py  circuit_extraction_execution.py  classification.py  common.py  consortium.py  contribution.py  density.py  derivation.py  electrical_cell_recording.py  electrical_recording_stimulus.py  em_cell_mesh.py  em_dense_reconstruction_dataset.py  emodel.py  entity.py  external_data_source.py  external_data_source_page.py  external_database.py  external_url.py  (+51 more)
app/graphql/: router.py  schema.py
app/models/: __init__.py  (+15 more)
dependencies/: db.py
docs/: API.md  asset-labels.md  assets.md  authentication.md  campaign-models-diagram.md  deletion.py  manual_deployment.md  multipart-upload.md  schema.md  task-models-diagram.md
import/: curate_data.py  import_data.py
models/: agent.py  annotation.py  base.py  contribution.py  density.py  model.py  morphology.py  role.py
nexus_use_case_dump/: source.json
routers/: agent.py  contribution.py  experimental_bouton_density.py  experimental_neuron_density.py  experimental_synapses_per_connection.py  morphology.py  organization.py  person.py  role.py
schemas/: agent.py  contribution.py  density.py  morphology.py  role.py
scripts/: dump.sh  generate_asset_labels_table.py  load.sh  write_dump_load_scripts.py
test/: conftest.py  test_contribution.py  test_create_agent.py  test_create_license.py  test_create_morphology.py  test_experimental_bouton_density.py  test_experimental_neuron_density.py  test_experimental_synapses_per_connection.py  test_license.py  test_morphology.py  test_organization.py  test_person.py  test_query_morphology.py  test_role.py  test_species.py  test_strain.py  test_synapses_per_connection.py
test_dump/: comparator.py  conftest.py  test_dump.py
test_legacy/: __init__.py  conftest.py  test_query.py  test_resource_organization.py  test_resource_person.py  test_sbo_complex_query.py  test_sbo_count.py  test_sbo_count_with_term_region.py  test_sbo_emodel_facet.py  test_sbo_faceted_search_with_term_region.py  test_sbo_facets.py  test_sbo_find_by_ids.py  test_sbo_morphology.py  test_sbo_morphology_ids.py  test_search_generator_task_activity.py  test_search_license.py  test_search_mesh.py  test_search_mtype_etype.py
tests/: __init__.py  conftest.py  test_analysis_notebook_environment.py  test_analysis_notebook_execution.py  test_analysis_notebook_result.py  test_analysis_notebook_template.py  test_application.py  test_auth.py  test_brain_atlas.py  test_brain_atlas_region.py  test_brain_region.py  test_brain_region_hierarchy.py  test_brain_region_hierarchy_name.py  test_brain_region_mesh.py  test_calibration.py  test_calibration_result.py  test_campaign.py  test_cell_composition.py  test_cell_morphology.py  test_cell_morphology_protocol.py  test_circuit.py  test_circuit_extraction_campaign.py  test_circuit_extraction_config.py  test_circuit_extraction_config_generation.py  test_circuit_extraction_execution.py  test_circuit_hierarchy.py  test_config.py  test_consortium.py  test_contribution.py  test_db_auth.py  test_db_utils.py  test_derivation.py  test_electrical_cell_recording.py  test_electrical_recording_stimulus.py  test_em_cell_mesh.py  test_em_dense_reconstruction_dataset.py  test_emodel.py  test_entity.py  test_errors.py  test_etype.py  (+63 more)
(+669 files in other folders)
