[project]
name = "entitycore"
version = "0.0.0"
description = "entitycore"
authors = [{ name = "Open Brain Institute" }]
dependencies = [
    "alembic>=1.14.1",
    "alembic-postgresql-enum>=1.10.0",
    "alembic-utils>=0.8.6",
    "boto3>=1.36.3",
    "cachetools>=5.5.2",
    "fastapi>=0.137.2",
    "fastapi-filter>=2.0.0",
    "starlette>=1.0.1",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "pydantic>=2",
    "sqlalchemy",
    "uvicorn[standard]",
    "psycopg2",
    "click>=8.1.7",
    "pydantic-settings>=2.7.1",
    "pyjwt>=2.10.1",
    "python-multipart>=0.0.20",       # needed by fastapi to handle uploaded files
    "pgvector>=0.4.1",
    "openai>=1.101.0",
    "sentry-sdk>=2.65.0",
]
requires-python = "==3.12.*"
readme = "README.md"
license = "Apache-2.0"

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "coverage[toml]",
    "moto[s3]>=5.0.28",
    "pyright>=1.1.400",
    "pytest",
    "pytest-cov",
    "pytest-freezer>=0.4.9",
    "pytest-httpx>=0.35.0",
    "ruff",
    "types-boto3-lite[essential]>=1.36.11",
    "types-cachetools>=5.5.0.20240820",
]

[tool.setuptools.packages.find]
include = ["app"]

[tool.uv]
required-version = ">=0.9.0"

[tool.ruff]
line-length = 100
target-version = "py312"
include = [
    "pyproject.toml",
    "app/**/*.py",
    "tests/**/*.py",
    "alembic/**/*.py",
    "scripts/**/*.py",
]

[tool.ruff.lint]
preview = true
select = ["ALL"]
ignore = [
    "stdlib-module-shadowing",    # Module is shadowing a Python builtin module
    "missing-type-args",  # Missing type annotation for `*args`
    "missing-type-kwargs",  # Missing type annotation for `**kwargs`
    "any-type",  # Dynamically typed expressions (typing.Any) are disallowed
    "missing-trailing-comma",  # Trailing comma (to have similar behavior to black)
    "missing-copyright-notice",  # Missing copyright notice at top of file
    "single-line-implicit-string-concatenation",  # single line implicit string concatenation (disabling suggested by ruff formatter)
    "invalid-function-name",    # function name should be lowercase
    "logging-too-many-args", # Too many arguments for `logging` format string
    "too-many-locals", # Too many local vars
    "unnecessary-assign",  # Unnecessary assignment to `result` before `return` statement
    "unused-async",  # Function is declared `async`, but doesn't `await` or use `async` features.
    "non-empty-init-module",  # `__init__` module should only contain docstrings and re-exports
    "hardcoded-bind-all-interfaces",    # Possible binding to all interfaces
    "line-contains-todo",  # Line contains TODO, consider resolving the issue
    "TD",      # TODOs
    "unnecessary-assign",  # Unnecessary assignment to `query` before `return` statement
    ### TODO: remove rules temporarily ignored (lower priority)
    "docstring-missing-returns", # `return` is not documented in docstring
    "docstring-missing-yields", # `yield` is not documented in docstring
    "docstring-missing-exception", # Raised exception missing from docstring
    ### TODO: remove additional rules temporarily ignored (higher priority)
    "ANN",    # All the annotations
    "undocumented-public-module",   # Missing docstring in public module
    "undocumented-public-class",   # Missing docstring in public class
    "undocumented-public-method",   # Missing docstring in public method
    "undocumented-public-function",   # Missing docstring in public function
    "undocumented-public-package",   # Missing docstring in public package
    "undocumented-public-nested-class",   # Missing docstring in public nested class
    "commented-out-code", # Found commented-out code
    "mixed-case-variable-in-class-scope",   # Variable in class scope should not be mixedCase
    "lambda-assignment",   # Do not assign a `lambda` expression, use a `def`
]

[tool.ruff.lint.isort]
known-local-folder = ["tests"]
combine-as-imports = true

[tool.ruff.lint.flake8-builtins]
builtins-ignorelist = ["license"]

[tool.ruff.lint.per-file-ignores]
"alembic/**.py" = [
    "D",       # pydocstyle
    "commented-out-code",  # Found commented-out code
    "implicit-namespace-package",  # Missing `__init__.py`
    "assert",    # Use of `assert` detected
    "too-many-statements", # Too many statements
    "line-too-long",    # Line too long
    "too-many-locals", # Too many local variables
]
"alembic/versions/*" = ["ALL"]
"tests/**.py" = [
    "ANN",     # Missing type annotation
    "D",       # pydocstyle
    "commented-out-code",  # Found commented-out code
    "implicit-namespace-package",  # Missing `__init__.py`
    "import-private-name", # Private name import from external module
    "too-many-statements", # Too many statements
    "magic-value-comparison", # magic value (constant) used in comparison (i.e. expected == 3)
    "assert",    # Use of `assert` detected
    "private-member-access",  # private member access
]
"app/db/model.py" = [
    "builtin-attribute-shadowing", # builtin-attribute-shadowing
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.pylint]
# Maximum number of arguments for function / method
max-args = 12
# Maximum number of locals for function / method body
max-locals = 15
# Maximum number of return / yield for function / method body
max-returns = 6
# Maximum number of branch for function / method body
max-branches = 12
# Maximum number of statements in function / method body
max-statements = 50
# Maximum number of public methods for a class (see R0904).
max-public-methods = 60


[tool.pytest.ini_options]
minversion = "6.0"
addopts = [
    "--import-mode=importlib",
    "-vv",
    "-ra",
    "--cov=app",
    "--durations=10",
    "--durations-min=0.1",
]
# asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = [
    "ignore:datetime.datetime.utcnow:DeprecationWarning:botocore", # https://github.com/boto/boto3/issues/3889
    "error::sqlalchemy.exc.SAWarning",
]

[tool.coverage.run]
branch = true
parallel = false
source_pkgs = ["app"]

[tool.coverage.report]
show_missing = true
precision = 0
fail_under = 90
omit = ["__main__.py", "scripts/*"]

[tool.coverage.xml]
output = "coverage/coverage.xml"

[tool.pyright]
exclude = []
